--- a/package.json
+++ b/package.json
@@ -6,10 +6,17 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "jsqr": "^1.4.0",
+    "mobx": "^6.13.5",
+    "mobx-react": "^9.1.1",
+    "mobx-react-lite": "^4.0.7",
+    "mobx-state-tree": "^6.0.1",
     "react": "^18.3.1",
     "react-camera-pro": "^1.4.0",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.2.3",
+    "bootstrap": "4.6.2",
     "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
   },
@@ -40,7 +47,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.2.0",
-    "homepage": "https://d-yule.github.io/react-picture"
-  }
+    "gh-pages": "^6.2.0"
+  },
+  "homepage": "https://d-yule.github.io/react-picture/"
 }
